--- a/22-7-24/style.css
+++ b/22-7-24/style.css
@@ -305,3 +305,23 @@ text-shadow: 2px 2px 3px rgb(17, 10, 10);
     text-decoration: underline;
     
 }
+.l {
+    text-decoration: none;
+    font-size: 30px;
+    text-decoration-color: black;
+}
+.mm {
+    background-color: rgb(12, 211, 242);
+    color: wheat;
+    border-radius: 5px;
+    margin: 20px;
+    box-shadow: 6px 6px 10px rgb(10, 9, 9);
+}
+.n {
+    margin: 20px auto;
+    text-align: center;
+  }
+
+
+
+
