--- a/24-7-24/style.css
+++ b/24-7-24/style.css
@@ -245,5 +245,24 @@ nav a:hover {
     text-align: center;
     font-size: 30px;
 }
+.ll {
+    text-decoration: none;
+    font-size: 30px;
+    text-decoration-color: black;
+}
+.mm {
+    background-color: rgb(12, 211, 242);
+    color: wheat;
+    border-radius: 5px;
+    margin: 20px;
+    box-shadow: 6px 6px 10px rgb(10, 9, 9);
+}
+.nn {
+    margin: 20px auto;
+    text-align: center;
+  }
+
+
+
 
 
