--- a/24-7-24/style.css
+++ b/24-7-24/style.css
@@ -241,10 +241,10 @@ nav a:hover {
     height: 55px;
     padding: 3px;
 }
-.s h1 {
+/* .s h1 {
     text-align: center;
     font-size: 30px;
-}
+} */
 .ll {
     text-decoration: none;
     font-size: 30px;
